# backend_python

./: .env  .gitignore  billing_session.pkl  main.py  noc_session.pkl  pyproject.toml  requirements.txt
api/v1/: api.py  deps.py
api/v1/endpoints/: __init__.py  auth.py  cli.py  config_handler.py  customer_scrapper.py  onu_handler.py  open_ticket.py  users.py
backend-python/: .env  Dockerfile  README_DOCKER.md  docker-compose.yml  main.py  noc_session.pkl  pyproject.toml  requirements.txt
backend-python/api/v1/: api.py
backend-python/api/v1/endpoints/: __init__.py  cli.py  config_handler.py  file_handler.py  onu_handler.py  open_ticket.py  telnet.py
backend-python/schemas/: cli.py  config_handler.py  onu_handler.py  open_ticket.py
backend-python/services/: biling_scaper.py  config_handler.py  connection_manager.py  core_handler.py  exceltopostgress.py  open_ticket.py  telnet.py  telnet_client.py  telnet_handler.py
backend-python/templates/: config_bridge.yaml  config_c300.yaml  config_c600.yaml
backend/services/: README.md  api.ts  example.tsx  types.ts
core/: __init__.py  config.py  olt_config.py  security.py
schemas/: __init__.py  cli.py  customers_scrapper.py  open_ticket.py  users.py
services/: biling_scaper.py  config_handler.py  core_handler.py  core_hanlder.py  olt_manager.py  onu_handler.py  open_ticket.py  telnet_client.py  telnet_handler.py  user_services.py
