[project]
name = "backend-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.127.1",
    "numpy<2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.21",
    "selenium>=4.39.0",
    "telnetlib3>=2.0.8",
    "webdriver-manager>=4.0.2",
]
